test/valid/builtins/String.js
var x = String(123);
x = 'b';
x = String({});
x = String('a');
x = String(NaN);
x = String([]);
x = String(null);
x = String(false);
